fix: Passing width and height from JS (so that fixes the weird gaps)

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,8 @@ code {
   align-items: center;
 }
 
-#wave, #control {
+#wave,
+#control {
   width: 100%;
 }
 
